# spectrum

./: .gitignore  README.md  README_ja.md  flake.nix  index.html  package.json  pnpm-lock.yaml
docs/: README.md  architecture-v2.md  improvements.md  juce-menu-fix-implementation.md  juce-menu-fix-root-cause.md  plugin-ui-menu-issue-investigation.md  virtual-device-tracking.md
src/: App.tsx  App.v1.tsx.bak  api.ts  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  audio_capture.rs  audio_graph.rs  audio_output.rs  audio_unit.rs  audio_unit_ui.rs  config.rs  lib.rs  lib.rs.old  lib.v1.rs.bak  main.rs  mixer.rs  prismd.rs  route_config.rs  router.rs  vdsp.rs
src-tauri/src/api/: commands.rs  dto.rs  mod.rs
src-tauri/src/audio/: buffer.rs  bus.rs  edge.rs  graph.rs  meters.rs  mod.rs  node.rs  output.rs  processor.rs  sink.rs  source.rs
src-tauri/src/capture/: mod.rs  ring_buffer.rs
src-tauri/src/device/: enumerate.rs  mod.rs
src-tauri/swift/: AudioUnitUI.swift
src-tauri/tests/: collect_states.rs
src/hooks/: index.ts  useAudio.ts  useChannelColors.ts  useColors.ts  useDevices.ts  useGraph.ts  useIcons.ts  useMeters.ts  useNodeDisplay.ts  usePlugins.ts
src/lib/: api.ts  deviceId.ts  prismd.ts  voutId.ts
src/types/: graph.ts  tauri.d.ts
src/ui/: BusPanel.tsx  CanvasView.tsx  LeftSidebar.tsx  MixerPanel.tsx  RightPanel.tsx  SpectrumLayout.tsx  V1ExactLayout.tsx
src/ui/detail/: BusDetailView.tsx  DetailHeader.tsx  DetailView.tsx  EffectChainView.tsx  getDetailHeaderInfo.ts  types.ts
